chore: just some change codes for more maintainability