@@ -1,12 +1,8 @@
-package com.factions.cannonlimiter.chunk;
+package com.merelysnow.cannonlimiter.models;
 
-import com.factions.cannonlimiter.util.ChunkCoordinates;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.bukkit.Chunk;
-import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.block.Block;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
@@ -14,12 +10,13 @@ import org.jetbrains.annotations.NotNull;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
+import java.util.logging.Logger;
 
 @RequiredArgsConstructor
 @Data
 public class ChunkLimiter {
 
+    Logger logger = Logger.getLogger(getClass().getName());
     private final ChunkCoordinates chunkCoordinates;
     private double intervalTicks = 0;
     private double dispenserAmount = 0;
@@ -41,13 +38,13 @@ public class ChunkLimiter {
     public void resetTime() {
         this.resetAt = System.currentTimeMillis() + TimeUnit.SECONDS.toMillis(3L);
 
-        System.out.println("[Chunk-logs] X: " + chunkCoordinates.getX() + " Z: " + chunkCoordinates.getZ() + " foi resetada");
+        logger.info("[Chunk-logs] X: " + chunkCoordinates.getX() + " Z: " + chunkCoordinates.getZ() + " foi resetada");
     }
 
     public void warn(@NotNull Chunk chunk, String... message) {
-        final List<Entity> entities = Arrays.stream(chunk.getEntities())
-                .filter(entity -> entity instanceof Player)
-                .collect(Collectors.toList());
+        List<Entity> entities = Arrays.stream(chunk.getEntities())
+                .filter(Player.class::isInstance)
+                .toList();
         if (entities.isEmpty()) return;
 
         entities.forEach(player -> player.sendMessage(message));
